# backend.ai-jail

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Dockerfile.builder-manylinux  Dockerfile.builder-musllinux  Makefile  README.md  example_policy.yml  go.mod  go.sum  log.txt  log22.txt  ltrace_log.txt  main.go  policy.yml  test.txt  test_trace.txt  trace_ls.txt
.github/workflows/: add-to-project.yml  release.yml  update-policies.yml  update-profile.yml  update-profiles.yml
default-policies/: default-policy.amd64.yml  default-policy.arm64.yml
dockerfiles/: Dockerfile.builder-alpine3.8  Dockerfile.builder-ubuntu18.04  Dockerfile.builder-ubuntu20.04  Dockerfile.builder-ubuntu22.04  Dockerfile.dev
policy/: common.go  default.yml  filebased.go  git.go  interfaces.go  julia.go  python-tensorflow.go  python.go
scripts/: build-binaries.sh  build.sh  create-pr.py  requirements.txt  update-policies.py  update-policy.py
src/: interface.rs  jail.rs  main.rs  policy.rs  utils.rs
src/arch/: aarch64.rs  mod.rs  x86_64.rs
src/policy/: filebased.go  filebased.rs  git.go  interfaces.go  python-tensorflow.go  traits.rs
src/tracer/: tracer.go
src/utils/: utils.go
utils/: utils.go
