[package]
name = "backendai-jail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
glob = "0.3.0"
libc = "0.2.139"
linux-personality = "1.0.0"
nix = "0.26.1"
derive_more = "0.99.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
libseccomp = "0.3.0"
tokio = { version = "1", features = ["full"] }
signal-hook = "0.3.14"
clean-path = "0.2.1"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
libloading = "0.7"